--- a/sass/styles/layout/_contact.scss
+++ b/sass/styles/layout/_contact.scss
@@ -26,5 +26,6 @@
     right: unset;
     bottom: 2rem;
     text-align: center;
+    background-color: $color-red;
   }
 }
