--- a/sass/styles/pages/_home.scss
+++ b/sass/styles/pages/_home.scss
@@ -118,4 +118,8 @@ img {
   height: 100vh;
   background-color: $color-red;
   scroll-snap-align: start;
+
+  @media only screen and (max-width: 770px) {
+    margin-bottom: 200px;
+  }
 }
